# FastqPuri

./: .Rhistory  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.bak  README.md  README_Qreport.md  README_Sreport.md  README_makeBloom.md  README_makeTree.md  README_trimFilter.md  README_trimFilterDS.md  README_trimFilterPE.md  Singularity  Singularity-Test  config.h  config.h.in  doxygen_sqlite3.db
.github/: pull.yml
R/: quality_report.Rmd  style.css  summary_filter_report.Rmd  summary_filter_reportDS.Rmd  summary_report.Rmd  utils.R
bioconda-recipe/: build.sh  meta.yaml
cmake/: Rpkg_check.cmake  checkHeadersFunctions.cmake
examples/: README  run_example.sh  test_output.html  test_summary_report.html
examples/Qreport_Sreport/: README  test_output.html  test_output.info  test_summary_report.html
examples/bloomROC/: README  bf_performance.sh  create_ROC.R  create_ROC_png.R  example_ROC_0p005_bloom.csv  example_ROC_0p0075_bloom.csv  example_ROC_0p01_bloom.csv  example_ROC_0p02_bloom.csv
examples/fa_fq_files/: ad_read1.fa  adapter_even_long.fa  adapter_even_short.fa  adapter_odd_long.fa  adapter_odd_short.fa  create_fq.sh  evenL70_r1.fq  evenL70_r2.fq  human_even_wad_even_long.fq  human_odd_wad_even_long.fq  human_odd_wad_odd_long.fq  oddL71_r1.fq  oddL71_r2.fq  rRNA_modified.fa  simReads.pl  testDS.read1.fq  testDS.read2.fq
examples/trimFilterDS_Sreport/: Ad_read2.fa  create_data.sh  create_data_old.sh  create_fq.sh  examples.sh  run_example_BLOOM.sh  run_example_TREE.sh
examples/trimFilterDS_Sreport/adapters/: README  fq_gen.sh  run_examples.sh
examples/trimFilterDS_Sreport/bin_files/: DS_Sreport_example.html
examples/trimFilterPE_Sreport/: README  run_example_BLOOM.sh  run_example_TREE.sh
examples/trimFilterPE_Sreport/adapters/: create_fq.sh  fq_gen.sh
examples/trimFilterPE_Sreport/bin_files/: DS_Sreport_example.html  create_fake_bins.R
examples/trimFilter_Freport/: README  simReads.pl
examples/trimFilter_Sreport/: README  create_fq.sh  rRNA_example.bf  rRNA_example.bf.txt  run_example_BLOOM.sh  run_example_TREE.sh
examples/trimFilter_Sreport/adapters/: README  contaminant_list_10032016.txt  run_examples.sh
examples/trimFilter_Sreport/bin_files/: create_fake_bins.R  filter_Sreport_example.html
examples/trimFilter_Sreport/makeBloom/: EColi.txt  EColi_bfsize.txt  EColi_biobloom.txt  EColi_hashNum.txt  biobloom_summary.tsv  commands
html/: Lmer_8c.html  Lmer_8c__incl.map  Lmer_8c__incl.md5  Lmer_8h.html  Lmer_8h__dep__incl.map  Lmer_8h__dep__incl.md5  Lmer_8h_source.html  Qreport_8c.html  Qreport_8c__incl.map  Qreport_8c__incl.md5  Rcommand__Freport_8c.html  Rcommand__Freport_8c__incl.map  Rcommand__Freport_8c__incl.md5  Rcommand__Freport_8h.html  Rcommand__Freport_8h__dep__incl.map  Rcommand__Freport_8h__dep__incl.md5  Rcommand__Freport_8h_source.html  Rcommand__Qreport_8c.html  Rcommand__Qreport_8c__incl.map  Rcommand__Qreport_8c__incl.md5  Rcommand__Qreport_8h.html  Rcommand__Qreport_8h__dep__incl.map  Rcommand__Qreport_8h__dep__incl.md5  Rcommand__Qreport_8h_source.html  Rcommand__Sreport_8c.html  Rcommand__Sreport_8c__incl.map  Rcommand__Sreport_8c__incl.md5  Rcommand__Sreport_8h.html  Rcommand__Sreport_8h__dep__incl.map  Rcommand__Sreport_8h__dep__incl.md5  Rcommand__Sreport_8h_source.html  Rcommands_8h_source.html  Sreport_8c.html  Sreport_8c__incl.map  Sreport_8c__incl.md5  adapters_8c.html  adapters_8c__incl.map  adapters_8c__incl.md5  adapters_8h.html  adapters_8h__dep__incl.map  (+312 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  files_0.js  files_1.js  (+60 more)
include/: Lmer.h  Rcommand_Qreport.h  Rcommand_Sreport.h  adapters.h  bloom.h  city.h  citycrc.h  copy_file.h  defines.h  ds_read.h  fa_read.h  fopen_gen.h  fq_read.h  init_Qreport.h  init_Sreport.h  init_makeBloom.h  init_makeTree.h  init_trimFilter.h  init_trimFilterDS.h  io_trimFilter.h  io_trimFilterDS.h  stats_info.h  str_manip.h  struct_trimFilter.h  tree.h  trim.h  trimDS.h
latex/: Lmer_8c.tex  Lmer_8c__incl.md5  Lmer_8h.tex  Lmer_8h__dep__incl.md5  Qreport_8c.tex  Qreport_8c__incl.md5  Rcommand__Freport_8c.tex  Rcommand__Freport_8c__incl.md5  Rcommand__Freport_8h.tex  Rcommand__Freport_8h__dep__incl.md5  Rcommand__Qreport_8c.tex  Rcommand__Qreport_8c__incl.md5  Rcommand__Qreport_8h.tex  Rcommand__Qreport_8h__dep__incl.md5  Rcommand__Sreport_8c.tex  Rcommand__Sreport_8c__incl.md5  Rcommand__Sreport_8h.tex  Rcommand__Sreport_8h__dep__incl.md5  Sreport_8c.tex  Sreport_8c__incl.md5  adapters_8c.tex  adapters_8c__incl.md5  adapters_8h.tex  adapters_8h__dep__incl.md5  adapters_8h__incl.md5  annotated.tex  bloom_8c.tex  bloom_8c__incl.md5  bloom_8h.tex  bloom_8h__dep__incl.md5  bloom_8h__incl.md5  city_8c.tex  city_8c__incl.md5  city_8h.tex  city_8h__dep__incl.md5  city_8h__incl.md5  citycrc_8h.tex  citycrc_8h__incl.md5  defines_8h.tex  defines_8h__dep__incl.md5  (+146 more)
pics/: bits_per_elem.R
pics/adapters/: palindromes.sh  palindromes_new.sh
src/: DStrim.c  Lmer.c  Qreport.c  Rcommand_Qreport.c  Rcommand_Sreport.c  Sreport.c  adapters.c  bloom.c  city.c  copy_file.c  ds_read.c  fa_read.c  fopen_gen.c  fq_read.c  init_Qreport.c  init_Sreport.c  init_makeBloom.c  init_makeTree.c  init_trimFilter.c  init_trimFilterDS.c  io_trimFilter.c  io_trimFilterDS.c  makeBloom.c  makeTree.c  make_tree.c  stats_info.c  str_manip.c  struct_trimFilter.c  tree.c  trim.c  trimDS.c  trimFilter.c  trimFilterDS.c
